--- a/new/team.html
+++ b/new/team.html
@@ -74,11 +74,11 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 
-		<div class="container-fluid" style="margin-top: 15vh">
+		<div class="container-fluid" style="margin-top:10vh">
 			<div class="row">
 			   <p class="TEAM">TEAM</p>
 				<div class="col-md-10 col-md-offset-2">
-					<p class="department">Management</p>
+					<p class="department">Management</p><br>
 					<div class="col-xs-3">
 						<div class="imageDiv">
 						   <img src="src/img/team/vivek_kumar.jpg" alt="Avatar" class="personImage">
@@ -135,7 +135,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-10 col-md-offset-2">
-					<br><p class="department">Departments</p>
+					<br><p class="department">Departments</p><br>
 					<p class="team">Mechanical Team</p>
 					<div class="col-xs-3">
 						<div class="imageDiv">
@@ -394,7 +394,48 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-10 col-md-offset-2">
+					<br><p class="department">FACULTY ADVISORS</p><br>
+					<div class="col-xs-5">
+						<div class="imageDiv">
+						   <img src="src/img/team/Shubhendu.JPG" alt="Avatar" class="personImage1">
+						   <div class="hoverDiv">
+						     <a href="" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
+						     <a href="" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
+						   </div>
+						    <div class="teamid">
+						   <p class="teamname">Shubhendu kumar</p>
+						   </div>
 
+						</div>
+					</div>
+					<div class="col-xs-5 col-xs-offset-1">
+						<div class="imageDiv">
+						   <img src="src/img/team/Nitish.JPG" alt="Avatar" class="personImage1">
+						   <div class="hoverDiv">
+						     <a href="" target="_blank"><div class="hoverIconFb" ><i class="fa fa-facebook" ></i></div></a>
+						     <a href="" target="_blank"><div class="hoverIconLinkedin"><i class="fa fa-linkedin" ></i></div></a>
+						   </div>
+						    <div class="teamid">
+						   <p class="teamname">Nitish Kumar</p>
+						   </div>
+						</div>
+					</div>
+
+
+				</div>
+			</div>
+			<div class="row">
+					<div class="col-md-10 col-md-offset-2">
+					<div class="col-xs-5">
+					<div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+					</div>
+					<div class="col-xs-5 col-xs-offset-1">
+					<div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+					</div>
+					</div>
+</div>
 		</div>
 
 	     
