--- a/new/about.html
+++ b/new/about.html
@@ -92,7 +92,28 @@
 			<p class="aboutHeading">ABOUT US</p>
 			<div class="row">
 				<div class="col-sm-5">
-					
+					<div class="about-carousel wow fadeInLeft">
+                        <div id="myCarousel" class="carousel slide">
+                            <div class="carousel-inner">
+                                <div class="active item"><img src="src/img/p1.JPG" alt="">
+                                    <div class="carousel-caption">
+                                        <p>Team IIT Roorkee MotorSports at FSUK competition, 2013</p>
+                                    </div>
+                                </div>
+                                <div class="item"><img src="src/img/p2.jpg" alt="">
+                                    <div class="carousel-caption">
+                                        <p>Our Debut Race at FSAE Australasia, 2011</p>
+                                    </div>
+                                </div>
+                                <div class="item"><img src="src/img/p3.jpg" alt="">
+                                    <div class="carousel-caption">
+                                        <p>Team IIT Roorkee MotorSports at FSUK competition, 2013</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="carousel-control left" href="#myCarousel" data-slide="prev"> <i class="fa fa-angle-left"> </i> </a>
+                            <a class="carousel-control right" href="#myCarousel" data-slide="next"> <i class="fa fa-angle-right"> </i> </a>
+                        </div>
 				</div>
 				<div class="col-sm-7">
 					<p class="aboutContent text-justify">
