--- a/new/team.html
+++ b/new/team.html
@@ -77,10 +77,10 @@
                 </nav>
 
 
-	<div class="container-fluid" style="margin-top:10vh">
+	<div class="container" style="margin-top:10vh">
 		<div class="row">
 		  <p class="TEAM">TEAM</p>
-			<div class="col-md-10 col-md-offset-1">
+			<div class="col-md-12">
 				<p class="department1">Management</p><br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
 				 <div class="col-xs-3">
 					   <div class="imageDiv">
@@ -139,11 +139,10 @@
 			</div>
                      
                      <br>
-                      <div class="container-fluid">
+                      <div class="container">
                         <div class="row">                        	
                         	<div class="col-md-12 department1" id="flipDownMech">Mechanical </div>
                         	<hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2); width: 90vw;">
-                            <div id="mechJS">
                             <div class="col-xs-3 ">
                              <div>
                              <a href="steering.html"><img src="team_img/steering.jpg" alt="steering" class="personImage"><br></a></div>
@@ -195,12 +194,11 @@
                         </div>
                         </div></div>
                         <br><br>     
-                        <div class="container-fluid">
+                        <div class="container">
                         <div class="row">
                         <div class="col-md-12 department1" id="flipDownElec">Electrical</div>
                         	<hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2); width: 90vw;">
                         </div>
-                         <div id="elecJS">
                            <div class="col-xs-3">
                              <div>
                             <a href="hvsystem.html">  <img src="team_img/hv.JPG" alt="" class="personImage"><br></a>
@@ -227,12 +225,10 @@
                            </div>
                           </div></div>
                         </div></div><br><br></div>
-                  <div class="container-fluid" >
+                  <div class="container" >
                    <div class="row">
                         <div class="col-md-12 department1" id="flipDownMarket">Operations and Financial</div>
-                   </div>
                              <br><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2); width: 90vw;">
-                               <div id="marketJS">
                                 <div class="col-xs-3">
                                         <div class="imageDiv">
                                            <img src="src/img/team/Shubhendu.JPG" alt="Avatar" class="personImage">
@@ -288,11 +284,10 @@
                                         </div>
                                 </div>
                          <br></div></div>
-                      <div class="container-fluid">
+                      <div class="container">
                         <div class="row">
                         <div class="col-md-12 department1" id="flipDownCreative">Design</div>
                         	<hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2); width: 90vw;">
-                                               <div id="creativeJS">
                                               <div class="col-xs-3">
                                                 <div class="imageDiv">
                                                    <img src="src/img/team/Dhruv Vishwakarma.jpg" alt="Avatar" class="personImage">
@@ -377,11 +372,11 @@
                          <br></div>
                       </div></div></div>
                       </div><br><br>
-                <div class="container-fluid">
+                <div class="container">
+                  <div class="row">
              
                    <p class="department1">Faculty Advisors</p><hr style="margin-top:0px;border:1px solid rgba(0,0,0,0.2)">
-                  <div class="row">
-                 <div class="col-md-10 col-md-offset-1">
+                 <div class="col-md-12 col-md-offset-0">
                                            <div class="col-md-10">
                      <p class="facultyDetails">Prof Akshay Dvivedi has been a constant source of guidance for the mechanical team of IIT Roorkee Motorsports since 2010. Prof Dvivedi has completed his Ph.D. in Advanced Manufacturing Processes from IIT Roorkee in 2009 and has also won the Outstanding teacher award in 2016. His areas of interest include Advanced Manufacturing Processes, Nontraditional Micro-machining, Metal Matrix Composites, Primary and Secondary Processing of MMC and 
 
@@ -394,7 +389,7 @@ Quality Management. Prof Dwivedi has stood by our side for all these years and f
                   </div>
               </div><hr>
    <div class="row">
-                 <div class="col-md-10 col-md-offset-1">
+                 <div class="col-md-12 col-md-offset-0">
                       <div class="col-md-2">
                       <img src="src/img/team/Arup Kumar Das.jpg" class="teamImage">
                       </div>
@@ -404,7 +399,7 @@ Quality Management. Prof Dwivedi has stood by our side for all these years and f
                   </div>
               </div><hr>
                        <div class="row">
-                 <div class="col-md-10 col-md-offset-1">
+                 <div class="col-md-12 col-md-offset-0">
                       <div class="col-md-10">
 <p class="facultyDetails">Prof Pramod Agarwal has been a constant source of Motivation for the Electrical team of IIT Roorkee Motorsports since the very first year of our existence. Prof Agarwal has completed his Ph.D. in Microprocessor Controlled Current Source Inverter fed Induction motor drive from IIT Roorkee in 1995. Prof Agarwal has won several awards like the Outstanding teacher award in 2008, University Gold medal, The Union Ministry of Energy: Department of Power Medal and many more. His areas of interest include Electrical Machines, Power Electronics, Microprocessors, Microcomputers Controlled Electric Drives, Electrical Machines, Power Electronics, Microprocessors, Microcomputers Controlled Electric Drives. For his infinite wisdom, abundant knowledge and constant support Team IIT Roorkee Motorsports feels honored to have him as our Faculty Advisor.</p>
                      </div>
